--- a/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
@@ -21,6 +21,7 @@
 		   //newsuite.addTestPage("../DocumentManager/DocumentManagerTestSuite.html");
          newsuite.addTestPage("../FundamentalTypes/FundamentalTypesTestSuite.html");
          newsuite.addTestPage("../HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html");
+         newsuite.addTestPage("../HtmlDocument/HtmlDocumentTest.html");
          newsuite.addTestPage("../Internationalization/InternalizationTestSuite.html");
          newsuite.addTestPage("../LanguageSelectorWidget/LanguageSelectorWidgetTest.html");
          //newsuite.addTestPage("../NewsReaderWidget/NewsReaderWidgetTestSuite.html");
