--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -20,6 +20,8 @@
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Tabs.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Window.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Modal.js"></script>    
+   <script type="text/javascript" src="JavaScript/Libraries/MooEditable/MooEditable.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/MooEditable/MooEditable.Extras.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/RemoteStyleSheet/RemoteStyleSheet.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="JavaScript/Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>  
@@ -37,11 +39,14 @@
    <script type="text/javascript" src="JavaScript/Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIMessageBus/WebUIMessage.js"></script>
     
+   <script type="text/javascript" src="JavaScript/Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/ComponentStateManager.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DocumentEditor/DocumentEditor.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/DocumentEditor/DocumentEditorDialog.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DataElementBehaviour.js"></script>
@@ -84,6 +89,7 @@
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/HierarchicalMenuWidget/HierarchicalMenuWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/HtmlDocument/HtmlDocument.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Internationalization/Locale.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Internationalization/LocaleUtil.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Internationalization/ResourceKey.js"></script>
@@ -105,6 +111,7 @@
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/Tab.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/TabSelectedMessage.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/TabWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TextAreaEditor/TextAreaEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarButton.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarDivider.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ToolBarWidget/ToolBarButtonFactory.js"></script>
