--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopDocumentTest.html
@@ -28,6 +28,7 @@
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
    <script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
 	
+   <script type="text/javascript" src="../AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="../BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="../BrowserWidget/UnconfiguredWidgetException.js"></script>
@@ -86,18 +87,22 @@
       var HEADER_DEFINITION_SELECTOR = "/desktopConfiguration/header";
       var WEBUI_CONFIGURATION_URI = "../Desktop/WebUIConfiguration.xml";
 		
-      var desktopInternationalization = null;
-      var desktopDefinition = null;
-      var desktopDocument = null;
-      var headerDefinition = null;
+      var componentStateManager;
+      var desktopInternationalization;
+      var desktopDefinition;
+      var desktopDocument;
+      var headerDefinition;
       var testCaseChain = new Chain();
-      var webUIConfiguration = null;
-      var webUILogger = null;
+      var webUIConfiguration;
+      var webUILogger;
+      var webUIMessageBus;
 		
       function beforeEachTest(){
          inform( "beforeEachTest" );
+         componentStateManager = new ComponentStateManager();
          webUIConfiguration = new WebUIConfiguration( WEBUI_CONFIGURATION_URI );
          webUILogger = new WebUILogger( webUIConfiguration );
+         webUIMessageBus = new WebUIMessageBus();
          desktopInternationalization = new XMLResourceBundle( webUIConfiguration );
          desktopInternationalization.load( new Locale({ language : "en" }) );
            
@@ -169,7 +174,7 @@
          
                //VERIFY:
                assertThat( instanceOf( desktopDocument.getDocument(), SmartDocument ), is( true ));
-               assertThat( desktopDocument.getDocument().getState(), equalTo( SmartDocument.States.UNMARSHALLED ));
+               assertThat( desktopDocument.getDocument().getState(), equalTo( AbstractDocument.States.UNMARSHALLED ));
                testCaseChain.callChain();
             },
             afterEachTest 
@@ -185,7 +190,7 @@
             },
             function(){
                //VERIFY:
-               assertThat( desktopDocument.getDocument().getState(), equalTo( SmartDocument.States.CONSTRUCTED ));
+               assertThat( desktopDocument.getDocument().getState(), equalTo( AbstractDocument.States.CONSTRUCTED ));
                assertThat( $( DESKTOP_CONTAINER_ID ).getChildren( '*' ).length, greaterThan( 0 ));
                testCaseChain.callChain();
             },
