--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/DataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/DataElementTest.html
@@ -28,6 +28,7 @@
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
    <script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
 	
+   <script type="text/javascript" src="../BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../Desktop/UnconfiguredDesktopElementException.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/HashMap.js"></script>
