--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/SmartDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/SmartDocumentTest.html
@@ -30,11 +30,14 @@
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
    <script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
 	
+   <script type="text/javascript" src="../AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="../BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="../ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="../ComponentStateManager/ComponentStateManager.js"></script>
+   <script type="text/javascript" src="../DocumentEditor/DocumentEditor.js"></script>
+   <script type="text/javascript" src="../DocumentEditor/DocumentEditorDialog.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/HashMap.js"></script>
@@ -44,6 +47,7 @@
    <script type="text/javascript" src="../FundamentalTypes/OptionsResource.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/RemoteResource.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/XmlResource.js"></script>
+   <script type="text/javascript" src="../HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
    <script type="text/javascript" src="../Internationalization/Locale.js"></script>
    <script type="text/javascript" src="../Internationalization/LocaleUtil.js"></script>
    <script type="text/javascript" src="../Internationalization/ResourceKey.js"></script>
@@ -66,6 +70,8 @@
    <script type="text/javascript" src="../SmartDocument/DocumentFooter.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentHeader.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentPlugin.js"></script>
+   <script type="text/javascript" src="../SmartDocument/FormElement.js"></script>
+   <script type="text/javascript" src="../SmartDocument/FormField.js"></script>
    <script type="text/javascript" src="../SmartDocument/MissingBindVariableException.js"></script>
    <script type="text/javascript" src="../SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="../WebUIConfiguration/WebUIConfiguration.js"></script>
@@ -73,12 +79,11 @@
    <script type="text/javascript" src="../WebUILogger/WebUILogger.js"></script> 
    <script type="text/javascript" src="../WebUIMessageBus/TestMessageOne.js"></script>
    <script type="text/javascript" src="../WebUIMessageBus/TestMessageTwo.js"></script>
-   <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessageBus.js"></script> 
 		
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         //test_construct_whenErrorOccured_revertsConstructionAndFiresError();
+         test_construct_whenErrorOccured_revertsConstructionAndFiresError();
       });
 				
       JsHamcrest.Integration.JsUnit();
@@ -117,7 +122,7 @@
          documentDefinition = new XmlResource( DOCUMENT_DEFINITION_URI );
          smartDocument = new SmartDocument( 
             resourceBundle, 
-            {  widgetContainerId : DOCUMENT_CONTAINER_ID, 
+            {  documentContainerId : DOCUMENT_CONTAINER_ID, 
                documentDefinitionUri : DOCUMENT_DEFINITION_URI, 
                documentContentUri : DOCUMENT_DATA_URI, 
                onDocumentReady : onDocumentReady, 
@@ -138,7 +143,7 @@
 
       function afterEachTest(){
          messageBus.tearDown();
-         if( smartDocument.getState() > SmartDocument.States.INITIALIZED ) smartDocument.destroy();
+         if( smartDocument.getState() > AbstractDocument.States.INITIALIZED ) smartDocument.destroy();
          smartDocument = null;
          doumentContainerElement = null;
          testCaseChain.clearChain();
@@ -154,8 +159,8 @@
                assertThat( smartDocument.getDocumentDefinition(), not( nil() ));
                assertThat( instanceOf( smartDocument.getDocumentDefinition(), XmlResource ), is( true ));
 			
-               assertThat( smartDocument.getDocumentData(), not( nil() ));
-               assertThat( instanceOf( smartDocument.getDocumentData(), XmlResource ), is( true ));
+               assertThat( smartDocument.getDocumentContent(), not( nil() ));
+               assertThat( instanceOf( smartDocument.getDocumentContent(), XmlResource ), is( true ));
                testCaseChain.callChain();
             },
             afterEachTest 
@@ -236,7 +241,7 @@
             function(){
                smartDocument = new SmartDocument( 
                      resourceBundle, 
-                     {  widgetContainerId : DOCUMENT_CONTAINER_ID, 
+                     {  documentContainerId : DOCUMENT_CONTAINER_ID, 
                         documentDefinitionUri : ERRONEOUS_DOCUMENT_DEFINITION_URI, 
                         documentContentUri : DOCUMENT_DATA_URI, 
                         onDocumentReady : onDocumentReady, 
@@ -246,10 +251,10 @@
                smartDocument.construct();
             },
             function(){
-               assertThat( smartDocument.getState(), equalTo( SmartDocument.States.INITIALIZED ));
-               assertThat( smartDocument.getHeader().getState(), equalTo( DocumentElement.States.INITIALIZED ));
-               assertThat( smartDocument.getBody().getState(), equalTo( DocumentElement.States.INITIALIZED ));
-               assertThat( smartDocument.getFooter().getState(), equalTo( DocumentElement.States.INITIALIZED ));
+               assertThat( smartDocument.getState(), equalTo( AbstractDocument.States.INITIALIZED ));
+               assertThat( smartDocument.getHeader(), is( nil() ));
+               assertThat( smartDocument.getBody(), is( nil() ));
+               assertThat( smartDocument.getFooter(), is( nil() ));
                assertThat( doumentContainerElement.getChildren().length, equalTo( 0 ));
                testCaseChain.callChain();
             },
