--- a/Implementation/WebTier/WebContent/JavaScript/Source/HtmlDocument/HtmlDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/HtmlDocument/HtmlDocumentTest.html
@@ -176,6 +176,6 @@
 <body>
    <h1>HtmlDocument.js test page</H1>
    <p>This page contains tests for HtmlDocument.js JavaScript class.</P>
-   <div id="HtmlDocument"></div>
+   <div id="HtmlDocument" style="overflow-y: hidden"></div>
 </body>
 </html>
