--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopTestSuite.html
@@ -19,6 +19,7 @@
         newsuite.addTestPage("../../Source/Desktop/DesktopPanelHeaderTest.html");
         newsuite.addTestPage("../../Source/Desktop/DesktopPanelTest.html");
 		  newsuite.addTestPage("../../Source/Desktop/DesktopTest.html");
+        newsuite.addTestPage("../../Source/Desktop/DesktopWindowTest.html");
 		  return newsuite;
 		}
 	</script>
