--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -61,6 +61,7 @@
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/FormField.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/Desktop/ComplexContentBehaviour.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/ConfigurationTimeoutException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopElementFactory.js"></script>
