--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopDocumentTest.html
@@ -77,6 +77,7 @@
 	
    <script type="text/javascript">
       window.addEvent('domready', function() {
+         //test_construct_constructsDocument();
          //test_destroy_destroysDocument();
       });
 				
