--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -73,6 +73,7 @@
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopHeader.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopPanel.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopPanelHeader.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopWindow.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/NoneExistingDesktopContainerElementException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/ResourceNotFoundException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/WindowDocker.js"></script>
