--- a/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
@@ -30,6 +30,7 @@
          newsuite.addTestPage("../SkinSelectorWidget/SkinSelectorWidgetTest.html");
          newsuite.addTestPage("../SmartDocument/SmartDocumentTestSuite.html");
          newsuite.addTestPage("../TabWidget/TabWidgetTestSuite.html");
+         newsuite.addTestPage("../TextAreaEditor/TextAreaEditorTestSuite.html");
          newsuite.addTestPage("../ToolBarWidget/ToolBarWidgetTestSuite.html");
          newsuite.addTestPage("../WebUIConfiguration/WebUIConfigurationTest.html");
          newsuite.addTestPage("../WebUIController/WebUIControllerTest.html");
