Implemented DocumentElementEditor and DataElementEditor.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDocumentElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDocumentElementTest.html
@@ -62,6 +62,8 @@
    <script type="text/javascript" src="../ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../ResourceManager/UndefinedDocumentResourceException.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DocumentElementEditor.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentPlugin.js"></script>
    <script type="text/javascript" src="../SmartDocument/CompositeDocumentElement.js"></script>
@@ -73,7 +75,9 @@
 	
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         test_construct_whenPluginIsSpecified_setsStatusToConstructed();
+         //test_initialize();
+         //test_construct_setsStatusToConstructed();
+         //test_construct_whenPluginIsSpecified_setsStatusToConstructed();
       });
 				
       JsHamcrest.Integration.JsUnit();
