--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/SmartDocumentTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/SmartDocumentTestSuite.html
@@ -17,6 +17,7 @@
 		  newsuite.addTestPage("../../Source/SmartDocument/CompositeDocumentElementTest.html");
         newsuite.addTestPage("../../Source/SmartDocument/DataElementTest.html");
         newsuite.addTestPage("../../Source/SmartDocument/DocumentElementTest.html");
+        newsuite.addTestPage("../../Source/SmartDocument/DocumentElementEditorTest.html");
 		  newsuite.addTestPage("../../Source/SmartDocument/DocumentHeaderTest.html");
         newsuite.addTestPage("../../Source/SmartDocument/DocumentPluginTest.html");
         newsuite.addTestPage("../../Source/SmartDocument/FormElementTest.html");
