--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -48,9 +48,12 @@
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/ComponentStateManager.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DocumentEditor/DocumentEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementEditor.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DataElementBehaviour.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DataElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DataElementEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/CompositeDocumentElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/CompositeDataElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentBody.js"></script>
